--- a/Fonts/release.json
+++ b/Fonts/release.json
@@ -4,6 +4,7 @@
     "fonts/FiraSans-Regular.ttf",
     "fonts/JosefinSans.ttf",
     "fonts/Lato-Regular.ttf",
+    "fonts/LibreFranklin-Var.ttf",
     "fonts/Montserrat-Bold.ttf",
     "fonts/Montserrat-Regular.ttf",
     "fonts/optima-nova-lt-black.otf",
