Add OpenDyslexic regular and bold to release.json

--- a/Fonts/release.json
+++ b/Fonts/release.json
@@ -10,6 +10,8 @@
     "fonts/Lato-Regular.ttf",
     "fonts/Montserrat-Bold.ttf",
     "fonts/Montserrat-Regular.ttf",
+    "fonts/OpenDyslexic-Regular.otf",
+    "fonts/OpenDyslexic-Bold.otf",
     "fonts/optima-nova-lt-black.otf",
     "fonts/Roboto-Bold.ttf",
     "fonts/Roboto-Regular.ttf"
