Adding The Atkinson Hyperlegible and OpenDyslexic Fonts (#69)
* Add the Atkinson Hyperlegible Font Files

* Add the Atkinson Hyperlegible CSS File

* Remove remove "Add your own font" section from atkinson-hyperlegible.css

* Add Atkinson Hyperlegible regular and bold to release.json

* Add Atkinson Hyperlegible to theme.json

* Add the OpenDyslexic Font Files

* Add The OpenDyslexic CSS File

* Add OpenDyslexic regular and bold to release.json

* Add OpenDyslexic to theme.json

* Bump Fonts version

---------

Co-authored-by: EMERALD <hudson.samuels@gmail.com>

--- a/Fonts/release.json
+++ b/Fonts/release.json
@@ -1,6 +1,8 @@
 {
   "include": [
     "fonts/AndroidInsomniaRegular.ttf",
+    "fonts/Atkinson-Hyperlegible-Regular-102.otf",
+    "fonts/Atkinson-Hyperlegible-Bold-102.otf",
     "fonts/bahnschrift.ttf",
     "fonts/DePixelBreit.ttf",
     "fonts/FiraSans-Regular.ttf",
@@ -8,6 +10,8 @@
     "fonts/Lato-Regular.ttf",
     "fonts/Montserrat-Bold.ttf",
     "fonts/Montserrat-Regular.ttf",
+    "fonts/OpenDyslexic-Regular.otf",
+    "fonts/OpenDyslexic-Bold.otf",
     "fonts/optima-nova-lt-black.otf",
     "fonts/Roboto-Bold.ttf",
     "fonts/Roboto-Regular.ttf"
